--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <form id="run">
+      <h4>Enter a year to find out if it's a leap year</h4>
       <input type="text" id="input">
       <button type="submit" name="button">Submit</button>
+      <br>
+      <span id="result"></span>
     </form>
   </body>
 </html>
